create web version of model

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-Flask
-flask-CORS
-# sklearn
-seaborn
-scikit-learn
-xgboost
-pandas
+flask
+Flask-CORS
 numpy
+pandas
+scikit-learn
+seaborn
 matplotlib
+joblib
+xgboost
+openpyxl
